eum_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: eum-svr01
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eum-svr01
            port: 
              number: 9093
